# trackfolio

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose-local.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 2023_07_21_2327-59dcb3e65208_database_creation.py  2023_07_23_1413-0c4a94d081b6_stock_model_added.py
src/: config.py  database.py  main.py  models.py
src/auth/: config.py  models.py  router.py  schemas.py  service.py  utils.py
src/templates/home/: dashboard.html
src/templates/layouts/: base.html
src/tk_api/: router.py  schemas.py  service.py
src/tk_api/service/: client.py  instruments.py  orders.py  structure.py
tests/: conftest.py
tests/test_handlers/: test_main.py
tests/test_handlers/test_auth/: test_auth_create.py
