[tool.poetry]
name = "trackfolio"
version = "0.1.0"
description = ""
authors = ["DipodDP <dipoddp@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.18"
asyncpg = "^0.28.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.0"}
alembic = "^1.11.1"
# uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "<0.101.0"
# tinkoff-investments = "^0.2.0b58"
# tinkoff = "^0.1.1"
# pydantic-settings = "^2.0.2"
tinkoff-investments = {git = "https://github.com/Tinkoff/invest-python"}

[tool.poetry.group.dev.dependencies]
# aiosqlite = "^0.19.0"
# fastapi = {extras = ["all"], version = "^0.100.0"}
fastapi = {version = "<0.101.0", extras = ["all"]}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"

[tool.poetry.scripts]
start = "src.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
asyncio_mode="auto"
